<resources>
    <string name="app_name">Sesotho Trivia</string>
    <string name="action_settings">Settings</string>

    <!--Start from example https://www.sitepoint.com/creating-a-cloud-backend-for-your-android-app-using-firebase/-->
    <string name="password_hint">Password</string>
    <string name="email_hint">Email</string>
    <string name="sign_up_button_label">Sign Up</string>
    <string name="signup_error_message">Please make sure you enter an email address and password!</string>
    <string name="signup_error_title">Error!</string>
    <string name="signup_success">Account successfully created! You can now Login.</string>
    <string name="login_error_message">Please make sure you enter an email address and password!</string>
    <string name="login_error_title">Error!</string>
    <string name="login_button_label">Login</string>
    <string name="sign_up_text">Sign Up!</string>
    <string name="title_activity_login">Sign in</string>
    <string name="add_item">Add New Item</string>
    <string name="action_logout">Logout</string>
    <!--End from example-->

    <!-- Sign-in status messages -->
    <string name="signed_in_fmt">Signed in as: %s</string>
    <string name="signed_in">Signed in</string>
    <string name="signing_in">Signing in…</string>
    <string name="signed_out">Signed out</string>
    <string name="signed_in_err">"Error: please check logs."</string>
    <string name="error_null_person">
        Error: Plus.PeopleApi.getCurrentPerson returned null. Ensure that the Google+ API is
        enabled for your project, you have a properly configured google-services.json file
        and that your device has an internet connection.
    </string>
    <string name="loading">Loading…</string>
    <string name="auth_code_fmt">Auth Code: %s</string>
    <string name="id_token_fmt">ID Token: %s</string>
    <string name="google_status_fmt">Google User: %s</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="google_title_text">Google Sign In</string>

    <!-- Google Play Services error for Toast -->
    <string name="play_services_error_fmt">Google Play Services Error: %i</string>

    <!-- Button labels -->
    <string name="sign_out">Sign Out</string>
    <string name="disconnect">Disconnect</string>
    <string name="refresh_token">Get Fresh Token</string>

    <!-- Content Description for images -->
    <string name="desc_google_icon">Google Logo</string>

    <!-- Rationale for asking for Contacts -->
    <string name="contacts_permission_rationale">Contacts access is needed in order to retrieve your email address.</string>

    <!-- Activity Names and Descriptions -->
    <string name="name_sign_in_activity">SignInActivity</string>
    <string name="desc_sign_in_activity">Signing in, signing out, and revoking access.</string>
    <string name="desc_sign_in_activity_scopes">Signing in, signing out, and revoking access with Google Drive permissions.</string>
    <string name="name_id_token_activity">IdTokenActivity</string>
    <string name="desc_id_token_activity">Retrieving an ID Token for the player.</string>
    <string name="desc_auth_code_activity">Demonstrate retrieving an auth code for authorizing your server.</string>
    <string name="name_auth_code_activity">ServerAuthCodeActivity</string>

    <!-- TODO(player): replace with your real server client ID -->
    <!-- Server Client ID.  This should be a valid Web OAuth 2.0 Client ID obtained
         from https://console.developers.google.com/ -->
    <string name="server_client_id">YOUR_SERVER_CLIENT_ID</string>


    <string name="large_placeholder_text">
        Lorem ipsum donec sagittis ipsum etiam odio, vivamus sodales mattis scelerisque in netus,
        varius cursus felis potenti class auctor, ut quisque mollis lacinia phasellus interdum
        bibendum magna risus id adipiscing, lorem hendrerit ut nisl integer eu
    </string>
    <string name="submit_answer">Romela Karabo</string>
    <string name="answer_hint">Karabo</string>
    <string name="wrong_answer_warning">Karabo ea hao e fosahetse</string>
    <string name="title_activity_advert">Advert Info</string>
    <string name="title_game_play_activity">Game Demo</string>
    <string name="saved_level">com.example.gamedomo</string>
    <string name="correct_answer_label">U Nepile</string>
    <string name="read_more_label"><u>Read more</u></string>
    <string name="title_activity_game_home">GameHomeActivity</string>
    <string name="score_label">Score: %d</string>
    <string name="level_label">Level: %d</string>
    <string name="preference_file_key">com.example.gamedemo.preference_file_key</string>
    <string name="saved_is_db_inicialized_value">saved_is_db_inicialized_value</string>
    <string name="insufficient_points">You need %d points to proceed</string>
    <string name="end_of_game">End of Game</string>
    <string name="credits">Liteboho</string>
    <string name="play">Bapala</string>
    <string name="references">Lingoloa</string>
    <string name="scores">Lintlha</string>
    <string name="copy_right">\u00a9 2016 Nalane Holdings Pty (Ltd)</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="title_activity_splash">SplashActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="hint">BOHASHANA...</string>


</resources>
