<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.nalaneholdings.sesothotrivia.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            app:srcCompat="@drawable/splash"
            android:id="@+id/imageView"
            android:scaleType="fitCenter"
            android:layout_weight="0.9"
            android:contentDescription="@string/app_name" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" >

            <Button
                android:text="@string/play"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/play_button"
                android:textColor="@color/colorPrimary"
                android:layout_marginBottom="8dp"
                android:onClick="onPlay"
                style="@style/button"/>

            <Button
                android:text="@string/scores"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/scores_button"
                android:layout_marginBottom="8dp"
                android:textColor="@color/colorPrimary"
                style="@style/button"/>

            <Button
                android:text="@string/references"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/references_button"
                android:layout_marginBottom="8dp"
                android:textColor="@color/colorPrimary"
                style="@style/button"/>

            <Button
                android:text="@string/credits"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/credits_button"
                android:layout_marginBottom="8dp"
                android:textColor="@color/colorPrimary"
                style="@style/button"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.1">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/copy_right"
                android:textAlignment="center"
                android:textSize="12sp"/>
        </LinearLayout>
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>
